# rupy

./: .gitignore  LICENSE  README.md  TASKS.md
cli/: README.md
cli/python/: iter_01.py  iter_02.py
cli/rust/: Cargo.toml
cli/rust/src/: main.rs
cli_01/python/: iter_01.py
cli_01/rust/iter_01/: Cargo.toml
cli_01/rust/iter_01/src/: main.rs
dag/: README.md
dag/python/: main.py
dag/rust/: Cargo.toml
dag/rust/src/: iterations.rs  main.rs
dag/rust/src/iterations/: iter1.rs  iter2.rs
dal/: README.md
dal/python/: lib.py  pyproject.toml
executor/: README.md
executor/rust/: Cargo.toml
executor/rust/src/: dtypes.rs  executor.rs  main.rs  maths.rs  tasks.rs
executor/rust/worker/: Cargo.toml
executor/rust/worker/src/: dtypes.rs  executor.rs  lib.rs  tasks.rs
executor/rust/worker/src/executors/: async_ch.rs  mod.rs  sync.rs
park/: README.md
pq/: README.md
pq/python/: __main__.py  pq.py  pyproject.toml
pq/rust/: Cargo.toml
pq/rust/src/: main.rs
rwjson/: README.md
rwjson/python/: rwjson.py
rwjson/rust/rwjson/: Cargo.toml
rwjson/rust/src/: main.rs
