[project]
name = "dal-example"
version = "0.1.0"
description = "Example of DAL with DuckDB"
authors = [
    {name = "Ninad Mhatre",email = "ninad.mhatre@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb (>=1.2.1,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
